fixed spacing

--- a/client/css/home.less
+++ b/client/css/home.less
@@ -12,6 +12,7 @@
 .pic-container {
 	overflow: hidden;
 	width: 100%;
+	margin-top: 20%;
 	margin-bottom: @navbar-height;
 	@media screen and (max-width: 500px) {
 		transform: translateY(-50%);
