--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -10,6 +10,7 @@
 .pic-container {
   overflow: hidden;
   width: 100%;
+  margin-top: 20%;
   margin-bottom: 5em;
 }
 @media screen and (max-width: 500px) {
